--- a/modules/civicrmtheme/civicrmtheme.services.yml
+++ b/modules/civicrmtheme/civicrmtheme.services.yml
@@ -1,6 +1,6 @@
 services:
   civicrmtheme.negotiator:
     class: Drupal\civicrmtheme\Theme\CivicrmThemeNegotiator
-    arguments: ['@current_user', '@config.factory']
+    arguments: ['@current_user', '@config.factory', '@civicrm']
     tags:
       - { name: theme_negotiator, priority: 0 }
