Revert "Change version constraint to point at our branch of civicrm-core"
This reverts commit 80d25e1a8d704f752694fd850096ce3a30844dac.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   ],
   "require": {
     "composer/installers": "^1.0",
-    "civicrm/civicrm-core" : "dev-roundearth-4.7.24 as 4.7.24"
+    "civicrm/civicrm-core" : "4.7.*"
   },
   "extra": {
     "installer-name": "civicrm"
